--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -26,7 +26,7 @@
     <add key="RavenDbApiKey" value="580ebd20-c201-4888-971f-62fc6c4a0b33" />
   </appSettings>
   <system.web>
-    <customErrors mode="Off" />
+    <!--<customErrors mode="Off" />-->
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
