--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -24,7 +24,7 @@
 
     <add key="RavenDbUrl" value="https://huanhvhd-odwv.ravenhq.com/databases/huanhvhd-db01" />
     <add key="RavenDbApiKey" value="580ebd20-c201-4888-971f-62fc6c4a0b33" />
-  <add key="recaptchaPublicKey" value="" /><add key="recaptchaPrivateKey" value="" /></appSettings>
+  </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
