--- a/Rabbit.IOnline/Web.config
+++ b/Rabbit.IOnline/Web.config
@@ -21,7 +21,12 @@
     <add key="recaptchaPrivateKey" value="6LcF-AsTAAAAADnD0pQBmDtSEMWXjc4gDzWy_Ru1" />
 
     <add key="DatabaseSystem" value="RavenDB" />
-    <!--<add key="DatabaseSystem" value="DocumentDB" />-->
+
+    <add key="RavenDbUrl" value="https://huanhvhd-odwv.ravenhq.com/databases/huanhvhd-db01" />
+    <add key="RavenDbApiKey" value="580ebd20-c201-4888-971f-62fc6c4a0b33" />
+
+    <add key="RavenDbUrl" value="https://huanhvhd-odwv.ravenhq.com/databases/huanhvhd-db01" />
+    <add key="RavenDbApiKey" value="580ebd20-c201-4888-971f-62fc6c4a0b33" />
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
