--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,7 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+
+/Rabbit.IOnline/Web.Debug.config
+/Rabbit.IOnline/Web.Release.config
+/Rabbit.IOnline/Web.config
